--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bip39": "^2.5.0",
+    "body-parser": "^1.18.3",
     "browserify": "^16.2.3",
     "cryptico": "^1.0.2",
     "crypto": "^1.0.1",
