--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "crypto": "^1.0.1",
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.4",
+    "firebase-admin": "^6.4.0",
     "mongodb": "^3.1.8",
     "nodemon": "^1.18.6",
     "socket.io": "^2.1.1",
